--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
     "module": "es2020",
     "lib": [
       "es2018",
-      "dom"
+      "dom",
+      "es2019"
     ]
   },
   "angularCompilerOptions": {
